# stats

./: .gitignore  Cargo.toml  README.md  tray-icons.rc
client/: build.rs
client/src/: main.rs
database/: docker-compose.yml  stats.sql
src/: main.rs
website/: .env.example  .gitignore  package-lock.json  package.json
website/app/routes/: graph.tsx
website/prisma/: schema.prisma
